# src/routes/auctions/index.ts
@@ -1,5 +1,5 @@
 /**
- * @file Server routes for /auctions/ endpoint.
+ * @file Server routes for /auctions endpoint.
  * @author kruhlmann <echo "yw5kcmvhc0brcnvobg1hbm4uzgv2cg==" | base64 -d>
  * @since 1.0.0
  * @packageDocumentation
@@ -7,13 +7,16 @@
 
 import { Request, Response } from "express";
 import { HTTP405Error } from "../../utils/http_errors";
+import * as controller from "./controller";
 
 export default [
     {
         path: "/auctions",
         method: "get",
         handler: async (_req: Request, res: Response) => {
-            res.send("Hello, Auctions!");
+            controller.get_all_auctions().then((auctions) => {
+                res.json(auctions);
+            });
         },
     },
     {
